--- a/src/App.scss
+++ b/src/App.scss
@@ -16,12 +16,31 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
+  overflow: auto;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  max-height: 100%;
 }
 
 body {
   background: #222;
   background-size: 400% 400%;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   justify-content: center;
@@ -50,6 +69,11 @@ body {
   border-radius: 10px;
   margin: 10px;
   &-left {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  &-right {
     display: flex;
     align-items: center;
     gap: 15px;
@@ -167,7 +191,64 @@ body {
     background-position: 0 0;
   }
 }
+//языки
+.nab-link {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: #333;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
 
+.nab-link:hover {
+  background-color: #555;
+  color: #ffffff;
+  text-shadow: 0 0 10px #ffffff;
+}
+
+.nab-dropdown-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.nab-dropdown {
+  width: 100%;
+  background: #333;
+  position: absolute;
+  z-index: 999;
+  display: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+.nab-dropdown-wrapper:hover .nab-dropdown {
+  display: block;
+}
+
+.nab-dropdown li {
+  display: block;
+}
+
+.nab-dropdown li a {
+  display: block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.nab-dropdown li a:hover {
+  background-color: #555;
+}
+
+.selected {
+  text-shadow: 0 0 10px #78ff88;
+  text-decoration: underline;
+}
+//языки
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -234,10 +315,14 @@ body {
     flex-direction: column;
     padding: 1%;
     gap: 30px;
-    & button {
-      // width: 20px; прикольно выглядит, на заметку
-      max-width: 80px;
+    & .cancel {
+      display: flex;
+      flex-direction: row;
     }
+  }
+  &-editBtn {
+    // width: 20px; прикольно выглядит, на заметку
+    max-width: 80px;
   }
   &-form {
     display: flex;
