--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,9 @@ body {
   background-color: #333;
   border-radius: 10px;
   margin: 10px;
+  position: sticky;
+  top: 10px;
+  z-index: 1111;
   &-left {
     display: flex;
     align-items: center;
@@ -216,7 +219,7 @@ body {
   width: 100%;
   background: #333;
   position: absolute;
-  z-index: 999;
+  z-index: 12;
   display: none;
   list-style-type: none;
   margin: 0;
@@ -249,6 +252,52 @@ body {
   text-decoration: underline;
 }
 //языки
+
+.article {
+  &-wrapper {
+    width: 100%;
+    color: #000;
+    height: 30em;
+  }
+  &-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+  }
+}
+
+.edit-article {
+  display: flex;
+  box-sizing: border-box;
+  margin: 1rem;
+  gap: 2rem;
+  justify-content: space-between;
+}
+
+.delete-article {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  &-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    color: #ff5353;
+    background-color: #333;
+    border: 0 solid transparent;
+    &:active {
+      color: #ffffff;
+      background-color: #ff5353;
+    }
+  }
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -377,6 +426,22 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   box-shadow: 0 0 10px #707070;
+  &-edit {
+    margin: 0 0 10px 0;
+  }
+  &-textarea {
+    width: 100%;
+    height: 5em;
+    border-radius: 10px;
+    background-color: transparent;
+    border-color: white;
+    color: #ffffff;
+    font-size: 1.5em;
+    &:focus {
+      background-color: #ffffff;
+      color: #000000;
+    }
+  }
   &-wrapper {
     display: flex;
     flex-direction: column;
@@ -434,25 +499,25 @@ footer {
     background: url("./assets/wave.png");
     background-size: 1000px 100px;
     &#wave1 {
-      z-index: 1000;
+      z-index: 12;
       opacity: 1;
       bottom: 0;
       animation: animateWave_02 4s linear infinite;
     }
     &#wave2 {
-      z-index: 999;
+      z-index: 12;
       opacity: 0.5;
       bottom: 10px;
       animation: animateWave 4s linear infinite;
     }
     &#wave3 {
-      z-index: 1000;
+      z-index: 12;
       opacity: 0.2;
       bottom: 15px;
       animation: animateWave_02 3s linear infinite;
     }
     &#wave4 {
-      z-index: 999;
+      z-index: 12;
       opacity: 0.7;
       bottom: 20px;
       animation: animateWave 3s linear infinite;
