--- a/src/App.scss
+++ b/src/App.scss
@@ -60,199 +60,6 @@ body {
 //   }
 // }
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: #333;
-  border-radius: 10px;
-  margin: 10px;
-  position: sticky;
-  top: 10px;
-  z-index: 1111;
-  &-left {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  &-right {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  &-link {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    &:hover {
-      background-color: #555;
-      color: #ffffff;
-      text-shadow: 0 0 10px#ffffff;
-    }
-  }
-  &-searching-button {
-    display: flex;
-    width: 100%;
-    height: 25px;
-    margin-right: 10px;
-    font-size: 1.2em;
-    border-radius: 10px;
-    border: 1px solid #ffffff;
-    background: transparent;
-    color: #000000;
-    &:focus {
-      background: #ffffff;
-    }
-  }
-  &-select {
-    height: 25px;
-    border-radius: 10px;
-    border: 1px solid #ffffff;
-    color: #ffffff;
-    background-color: transparent;
-    &:focus {
-      color: #000000;
-    }
-  }
-  &-button {
-    margin: 0;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    outline: none;
-    color: #fff;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    &:hover {
-      text-shadow: 0 0 10px #ffffff;
-    }
-    &::after {
-      content: "";
-      z-index: -1;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: #333;
-      left: 0;
-      top: 0;
-      border-radius: 10px;
-    }
-    &::before {
-      content: "";
-      background: linear-gradient(
-        to left bottom,
-        #ff94c4,
-        #f798d2,
-        #ec9de0,
-        #dea2eb,
-        #cfa8f5,
-        #b3b5ff,
-        #9ac1ff,
-        #87caff,
-        #74daff,
-        #6ee8fd,
-        #7af4f2,
-        #96ffe4
-      );
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      background-size: 600%;
-      z-index: -1;
-      width: calc(100% + 4px);
-      height: calc(100% + 4px);
-      filter: blur(7px);
-      animation: glowing 10s linear infinite;
-      transition: opacity 0.3s ease-in-out;
-      border-radius: 12px;
-      opacity: 1;
-    }
-    &:hover::before {
-      opacity: 1;
-    }
-    &:active::after {
-      background-color: transparent;
-    }
-    &:active {
-      color: #000;
-    }
-  }
-}
-
-@keyframes glowing {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 400% 0;
-  }
-  100% {
-    background-position: 0 0;
-  }
-}
-//языки
-.nab-link {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  background-color: #333;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.nab-link:hover {
-  background-color: #555;
-  color: #ffffff;
-  text-shadow: 0 0 10px #ffffff;
-}
-
-.nab-dropdown-wrapper {
-  position: relative;
-  display: inline-block;
-}
-
-.nab-dropdown {
-  width: 100%;
-  background: #333;
-  position: absolute;
-  z-index: 12;
-  display: none;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-}
-
-.nab-dropdown-wrapper:hover .nab-dropdown {
-  display: block;
-}
-
-.nab-dropdown li {
-  display: block;
-}
-
-.nab-dropdown li a {
-  display: block;
-  padding: 10px 20px;
-  color: #fff;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.nab-dropdown li a:hover {
-  background-color: #555;
-}
-
-.selected {
-  text-shadow: 0 0 10px #78ff88;
-  text-decoration: underline;
-}
-//языки
-
 .article {
   &-wrapper {
     width: 100%;
@@ -278,79 +85,12 @@ body {
   justify-content: space-between;
 }
 
-.delete-article {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  &-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    text-align: center;
-    color: #ff5353;
-    background-color: #333;
-    border: 0 solid transparent;
-    &:active {
-      color: #ffffff;
-      background-color: #ff5353;
-    }
-  }
-}
-
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-}
-
-.card {
-  display: flex;
-  // flex-wrap: wrap;
-  flex-direction: column;
-  background-color: transparent;
-  color: #ffffff;
-  max-width: 300px;
-  width: 100%;
-  padding: 20px;
-  box-shadow: 0 4px 8px #0000005f;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-
-  &-bottom,
-  &-top {
-    flex: 1 0 50%;
-    white-space: normal;
-  }
-  &-top {
-    object-fit: fill;
-    justify-content: center;
-    text-align: center;
-    &-image-wrapper {
-      // max-height: 250px;
-      width: 100%;
-      height: 100%;
-    }
-    &-image {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  &-bottom {
-    justify-content: center;
-    text-align: center;
-    &-title {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-    }
-  }
-  &:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-  }
+  padding-bottom: 200px;
 }
 
 .details {
@@ -414,163 +154,5 @@ body {
         color: #000000;
       }
     }
-  }
-}
-
-.comment {
-  border-radius: 8px;
-  border: 1px solid #fff;
-  padding: 10px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  box-shadow: 0 0 10px #707070;
-  &-edit {
-    margin: 0 0 10px 0;
-  }
-  &-textarea {
-    width: 100%;
-    height: 5em;
-    border-radius: 10px;
-    background-color: transparent;
-    border-color: white;
-    color: #ffffff;
-    font-size: 1.5em;
-    &:focus {
-      background-color: #ffffff;
-      color: #000000;
-    }
-  }
-  &-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-  }
-  &-data {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    & p {
-      text-decoration: underline;
-    }
-  }
-  & .delete-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border: 1px solid #ff8b8b;
-    cursor: pointer;
-    padding: 5px;
-    margin-left: auto;
-    &:hover {
-      box-shadow: 0 0 15px #ff8b8b;
-    }
-    &:active {
-      background-color: #ff5353;
-    }
-  }
-  & .trash {
-    width: 24px;
-    height: 24px;
-    background-color: transparent;
-  }
-}
-
-footer {
-  margin-top: 10%; //my modification
-  position: relative;
-  width: 100%;
-  background-color: #3586ff;
-  min-height: 100px;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  box-sizing: border-box;
-  & .wave {
-    position: absolute;
-    top: -100px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: url("./assets/wave.png");
-    background-size: 1000px 100px;
-    &#wave1 {
-      z-index: 12;
-      opacity: 1;
-      bottom: 0;
-      animation: animateWave_02 4s linear infinite;
-    }
-    &#wave2 {
-      z-index: 12;
-      opacity: 0.5;
-      bottom: 10px;
-      animation: animateWave 4s linear infinite;
-    }
-    &#wave3 {
-      z-index: 12;
-      opacity: 0.2;
-      bottom: 15px;
-      animation: animateWave_02 3s linear infinite;
-    }
-    &#wave4 {
-      z-index: 12;
-      opacity: 0.7;
-      bottom: 20px;
-      animation: animateWave 3s linear infinite;
-    }
-  }
-  & .menu {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-    flex-wrap: wrap;
-    & li {
-      font-size: 1.2em;
-      color: #fff;
-      margin: 0 10px;
-      display: inline-block;
-      opacity: 0.75;
-      &:hover {
-        opacity: 1;
-        transform: scale(1.2);
-        transition: ease-in-out 0.2s;
-        cursor: pointer;
-        text-shadow: 0 0 10px #ffffff;
-      }
-      & .link {
-        color: #fff;
-      }
-    }
-  }
-  & p {
-    color: #fff;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
-  }
-}
-
-@keyframes animateWave {
-  0% {
-    background-position-x: 1000px;
-  }
-  100% {
-    background-position-x: 0px;
-  }
-}
-
-@keyframes animateWave_02 {
-  0% {
-    background-position-x: 0px;
-  }
-  100% {
-    background-position-x: 1000px;
   }
 }
