--- a/src/components/Datepicker/datepicker.scss
+++ b/src/components/Datepicker/datepicker.scss
@@ -1,4 +1,12 @@
 .date-picker {
+  &-input {
+    text-align: center;
+    font-size: 1.1em;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    color: aliceblue;
+  }
   &-dropdown {
     width: 100%;
     height: 600px;
@@ -7,6 +15,6 @@
   &-wrapper {
     position: absolute;
     right: 0;
-    z-index: 15;  
+    z-index: 15;
   }
 }
