--- a/src/App.scss
+++ b/src/App.scss
@@ -62,18 +62,62 @@ body {
 
 .article {
   &-wrapper {
-    width: 100%;
-    color: #000;
-    height: 30em;
-  }
-  &-form {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    justify-content: center;
     align-items: center;
-    gap: 10px;
-    position: relative;
+    justify-content: center;
+    width: 100%;
+  }
+  &-label {
+    padding-bottom: 6px;
+    color: #000000;
+  }
+  &-input {
+    width: 100%;
+    border: 1px solid #d4d4d4;
+    padding: 12px;
+    height: 45px;
+    color: #000000;
+    border-radius: 8px;
+    font-size: 1.2rem;
+  }
+  &-textarea {
+    display: flex;
+    max-width: 100%;
+    border: 1px solid #d4d4d4;
+    padding: 12px;
+    border-radius: 8px;
+  }
+  &-form {
+    display: grid;
+    grid-column: auto;
+    gap: 12px;
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+
+    &-button {
+      cursor: pointer;
+      flex-grow: 1;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      border: none;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 12px;
+      width: 100%;
+      height: 45px;
+      background: linear-gradient(203deg, #3cfa16 -2.42%, #2fa3f5 92.62%);
+      background-size: 200% 100%;
+      color: #fff;
+      outline: none;
+      &:active {
+        text-shadow: 0 0 7px white;
+      }
+    }
   }
 }
 
@@ -113,46 +157,5 @@ body {
     // width: 20px; прикольно выглядит, на заметку
     max-width: 80px;
   }
-  &-form {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    & div {
-      display: flex;
-      flex-direction: column;
-    }
-    & label {
-      font-size: 0.75em;
-      text-decoration: underline;
-    }
-    & button {
-      text-align: center;
-      max-width: 80px;
-    }
-    & input {
-      max-width: 25%;
-      height: 1.5em;
-      font-size: 1em;
-      border-radius: 10px;
-      background-color: transparent;
-      border-color: white;
-      color: #ffffff;
-      &:focus {
-        background-color: #ffffff;
-        color: #000000;
-      }
-    }
-    & textarea {
-      height: 10em;
-      border-radius: 10px;
-      background-color: transparent;
-      border-color: white;
-      color: #ffffff;
-      font-size: 1.5em;
-      &:focus {
-        background-color: #ffffff;
-        color: #000000;
-      }
-    }
-  }
+  
 }
