--- a/src/components/Timekiller/timekiller.scss
+++ b/src/components/Timekiller/timekiller.scss
@@ -13,4 +13,7 @@
   border: 1px solid transparent;
   border-radius: 20px;
   box-shadow: 0 0 10px black;
+
+  display: flex;
+  flex-direction: column;
 }
